--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: daviddarnes/alembic
 
 navigation_header:
 Home: /
-Project 2: /Project_2/project2.md
-Lab 6: /Lab_6/Lab6.md
+Project 2: /Project_2/project2.html
+Lab 6: /Lab_6/Lab6.html
